--- a/js-battleship/index.html
+++ b/js-battleship/index.html
@@ -14,11 +14,11 @@
     </div>
     <div id="gamesboard-container"></div>
     <div class="option-container">
-        <div class="destroyer-preview" draggable="true"></div>
-        <div class="submarine-preview" draggable="true"></div>
-        <div class="cruiser-preview" draggable="true"></div>
-        <div class="battleship-preview" draggable="true"></div>
-        <div class="carrier-preview" draggable="true"></div>
+        <div class="destroyer-preview destroyer" draggable="true"></div>
+        <div class="submarine-preview submarine" draggable="true"></div>
+        <div class="cruiser-preview cruiser" draggable="true"></div>
+        <div class="battleship-preview battleship" draggable="true"></div>
+        <div class="carrier-preview carrier" draggable="true"></div>
     </div>
 
 </body>
