--- a/js-calculator/index.html
+++ b/js-calculator/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
         <link rel="icon" type="image/png" sizes="32x32" />
-        <link rel="stylesheet" href="/js-calculator/style.css" />
+        <link rel="stylesheet" href="style.css" />
 
         <title>Calculator app</title>
         <script src="app.js" defer></script>
